fixed scrollbar for home page and full menu, spice index title on hover, added happy hour details on full menu section

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Instrument+Serif:ital@0;1&display=swap');
 @import 'tailwindcss';
+@import 'tailwind-scrollbar-hide/v4';
 
 @theme {
 	--color-primary: #0a2310;
@@ -62,16 +63,6 @@
 	/* IE and Edge */
 	scrollbar-width: none;
 	/* Firefox */
-}
-
-.scroll-container {
-	scroll-snap-type: y mandatory;
-	scroll-behavior: smooth;
-}
-
-/* Hide the scrollbar for better UX */
-.scroll-container::-webkit-scrollbar {
-	display: none;
 }
 
 .scroll-toc::-webkit-scrollbar {
@@ -292,3 +283,23 @@ a {
 button {
 	cursor: pointer;
 }
+
+.scroll-container {
+	scroll-snap-type: y mandatory;
+	scroll-behavior: smooth;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scroll-container::-webkit-scrollbar {
+	display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scroll-container {
+	-ms-overflow-style: none; 
+	scrollbar-width: none; 
+}
+
+/* body .scroll-container{
+	display: none;
+} */
